[tool.poetry]
name = "sikepuri-of-algorithm"
version = "0.1.0"
description = ""
authors = ["chvmvd <chvmvd@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sikepuri_of_algorithm"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude=".*sum_1to100.ipynb"
