[tool.poetry]
name = "sikepuri-of-algorithm"
version = "0.1.0"
description = ""
authors = ["chvmvd <chvmvd@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sikepuri_of_algorithm"}]

[tool.poetry.dependencies]
python = "^3.10"
nbconvert = "^7.2.9"
ipykernel = "^6.21.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
databooks = "^1.3.7"
black = {extras = ["jupyter"], version = "^22.12.0"}
nbqa = "^1.5.3"
isort = "^5.10.1"
pyupgrade = "^3.3.1"
yamllint = "^1.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude='''
(
    /(
        \.git |
        node_modules |
        build |
        \.docusaurus |
    )/ |
    /my-website |
    .*sum_1to100.ipynb
)
'''
